--- a/calender.css
+++ b/calender.css
@@ -5,10 +5,11 @@
 .addeventatc {							
     position:absolute;
     text-align:center;
-    background:#2878eb;
+    background:crimson;
     cursor:pointer;
     color:#fff!important;
     font-size:15px;
+    margin-left: 20px;
     padding:12px 46px 12px 18px;
     
 }
@@ -16,7 +17,7 @@
     color:#fff;
     font-size:15px;
     text-decoration:none;
-    background-color:#2c84f4;
+    background-color:crimson;
 }
 .addeventatc .arrow {
     width:16px;
@@ -29,7 +30,7 @@
     background-size:16px 16px;
 }
 .addeventatc-selected {
-    background-color:#2c84f4;
+    background-color:crimson;
 }
 .addeventatc .start, .addeventatc .end, .addeventatc .timezone, .addeventatc .title, .addeventatc .description, .addeventatc .location, .addeventatc .organizer, .addeventatc .organizer_email, .addeventatc .facebook_event, .addeventatc .all_day_event, .addeventatc .date_format, .addeventatc .alarm_reminder, .addeventatc .recurring, .addeventatc .attendees, .addeventatc .calname, .addeventatc .uid, .addeventatc .status, .addeventatc .method, .addeventatc .client, .addeventatc .transp {display:none!important;}
 
