--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ html {
 a {
 	text-decoration: none;
 }
+.service-item h2{
+	color: crimson;
+}
 .container {
 	min-height: 100vh;
 	width: 100%;
@@ -288,19 +291,18 @@ p {
 	margin-top: 50px;
 }
 #services .service-item {
-	flex-basis: 80%;
 	display: flex;
-	align-items: flex-start;
+	width: 300px;
+	height:250px;
 	justify-content: center;
 	flex-direction: column;
-	padding: 30px;
 	border-radius: 10px;
 	background-image: url('https://agromavens.com/wp-content/uploads/2018/03/AdobeStock_128383234_small.jpg');
 	background-size: cover;
-	margin: 10px 5%;
 	position: relative;
 	z-index: 1;
 	overflow: hidden;
+	box-shadow: 1px 1px 7px black;
 }
 #services .service-item::after {
 	content: '';
@@ -309,25 +311,30 @@ p {
 	top: 0;
 	height: 100%;
 	width: 100%;
-	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+	background-image: linear-gradient(to right top, #8a8f92, #959a9f, #a2a4ab, #b0aeb7, #bfb8c2);
 	opacity: 0.9;
 	z-index: -1;
+	box-shadow: 1px 1px 7px gray;
 }
 #services .service-bottom .icon {
 	height: 80px;
 	width: 80px;
-	margin-bottom: 20px;
+	
+}
+#services .service-bottom .icon img{
+	border-radius: 10px;
+	box-shadow: 1px 1px 7px black;
+	margin-left: 10px;
+	margin-bottom: 150px;
 }
 #services .service-item h2 {
-	font-size: 2rem;
-	color: white;
-	margin-bottom: 10px;
-	text-transform: uppercase;
+	font-size:20px;
+	color: crimson;
+	margin-left: 20px;
+	margin-top: 10px;
+    text-transform: uppercase;
 }
-#services .service-item p {
-	color: white;
-	text-align: left;
-}
+
 /* End Services Section */
 
 /* Projects section */
